Fix: Multiple alert style z-index

--- a/src/app/shared/components/alert/alert.component.css
+++ b/src/app/shared/components/alert/alert.component.css
@@ -2,7 +2,6 @@
     position: fixed;
     bottom: -1rem;
     left: 50%;
-    z-index: 21;
     border-radius: 0.375rem 0.375rem 0 0 !important;
     border-bottom: none !important;
     white-space: nowrap;
